--- a/TravelTalk/Xib/GroupChatItemTableViewCell.xib
+++ b/TravelTalk/Xib/GroupChatItemTableViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="137" id="KGk-i7-Jjw" customClass="GroupChatItemTableViewCell" customModule="TravelTalk" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GroupChatItemTableViewCell" rowHeight="137" id="KGk-i7-Jjw" customClass="GroupChatItemTableViewCell" customModule="TravelTalk" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="445" height="137"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
