--- a/TravelTalk/Cell/ListItemTableViewCell.xib
+++ b/TravelTalk/Cell/ListItemTableViewCell.xib
@@ -9,61 +9,64 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChatListItemTableViewCell" rowHeight="132" id="KGk-i7-Jjw" customClass="ChatListItemTableViewCell" customModule="TravelTalk" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="464" height="132"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ListItemTableViewCell" rowHeight="70" id="KGk-i7-Jjw" customClass="ListItemTableViewCell" customModule="TravelTalk" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="274" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="464" height="132"/>
+                <rect key="frame" x="0.0" y="0.0" width="274" height="70"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IBZ-lI-gwZ">
-                        <rect key="frame" x="8" y="8" width="116" height="116"/>
+                        <rect key="frame" x="16" y="8" width="50" height="50"/>
                         <constraints>
+                            <constraint firstAttribute="width" constant="50" id="Vzu-Su-I62"/>
+                            <constraint firstAttribute="height" constant="50" id="aZP-1J-3Xq"/>
                             <constraint firstAttribute="width" secondItem="IBZ-lI-gwZ" secondAttribute="height" multiplier="1:1" id="swL-dW-TvY"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="88.88.88" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Naz-GC-Odq">
-                        <rect key="frame" x="404.33333333333331" y="8" width="51.666666666666686" height="13.333333333333336"/>
+                        <rect key="frame" x="206.33333333333334" y="10" width="51.666666666666657" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="so9-Uc-2TV">
-                        <rect key="frame" x="132" y="8" width="42" height="21"/>
+                        <rect key="frame" x="74" y="10" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kWh-Ve-2Eb">
-                        <rect key="frame" x="132" y="37" width="324" height="21"/>
+                        <rect key="frame" x="74" y="35" width="184" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="kWh-Ve-2Eb" firstAttribute="top" secondItem="so9-Uc-2TV" secondAttribute="bottom" constant="8" id="1js-AI-heM"/>
-                    <constraint firstItem="so9-Uc-2TV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="6hA-sj-u5Y"/>
+                    <constraint firstItem="kWh-Ve-2Eb" firstAttribute="top" secondItem="so9-Uc-2TV" secondAttribute="bottom" constant="4" id="1js-AI-heM"/>
+                    <constraint firstItem="so9-Uc-2TV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="6hA-sj-u5Y"/>
                     <constraint firstItem="so9-Uc-2TV" firstAttribute="leading" secondItem="IBZ-lI-gwZ" secondAttribute="trailing" constant="8" id="8Oz-Ce-cfx"/>
                     <constraint firstItem="IBZ-lI-gwZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="A77-g7-dQc"/>
-                    <constraint firstItem="Naz-GC-Odq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Eel-db-6vP"/>
+                    <constraint firstItem="Naz-GC-Odq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Eel-db-6vP"/>
                     <constraint firstItem="kWh-Ve-2Eb" firstAttribute="leading" secondItem="IBZ-lI-gwZ" secondAttribute="trailing" constant="8" id="FrZ-hR-QAI"/>
-                    <constraint firstItem="IBZ-lI-gwZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="PYH-4j-IwI"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="kWh-Ve-2Eb" secondAttribute="bottom" constant="8" id="Yhu-UM-CV4"/>
-                    <constraint firstAttribute="trailing" secondItem="kWh-Ve-2Eb" secondAttribute="trailing" constant="8" id="d6S-wd-hac"/>
-                    <constraint firstAttribute="trailing" secondItem="Naz-GC-Odq" secondAttribute="trailing" constant="8" id="edD-mC-Eso"/>
+                    <constraint firstItem="IBZ-lI-gwZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="PYH-4j-IwI"/>
+                    <constraint firstItem="kWh-Ve-2Eb" firstAttribute="top" secondItem="Naz-GC-Odq" secondAttribute="bottom" constant="4" id="RKy-Gn-c5n"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="kWh-Ve-2Eb" secondAttribute="bottom" constant="10" id="Yhu-UM-CV4"/>
+                    <constraint firstAttribute="trailing" secondItem="kWh-Ve-2Eb" secondAttribute="trailing" constant="16" id="d6S-wd-hac"/>
+                    <constraint firstAttribute="trailing" secondItem="Naz-GC-Odq" secondAttribute="trailing" constant="16" id="edD-mC-Eso"/>
                     <constraint firstAttribute="bottom" secondItem="IBZ-lI-gwZ" secondAttribute="bottom" constant="8" id="wwj-NL-LES"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="friendLatestChatLabel" destination="kWh-Ve-2Eb" id="Aoh-sa-weF"/>
-                <outlet property="friendLatestDateLabel" destination="Naz-GC-Odq" id="cSE-S6-sWG"/>
-                <outlet property="friendNameLabel" destination="so9-Uc-2TV" id="u9D-Sv-8v1"/>
-                <outlet property="friendProfileImageView" destination="IBZ-lI-gwZ" id="L2a-Yh-xte"/>
                 <outlet property="itemBackgroundView" destination="H2p-sc-9uM" id="yvl-zL-g8p"/>
+                <outlet property="latestChatLabel" destination="kWh-Ve-2Eb" id="Aoh-sa-weF"/>
+                <outlet property="latestDateLabel" destination="Naz-GC-Odq" id="cSE-S6-sWG"/>
+                <outlet property="nameLabel" destination="so9-Uc-2TV" id="u9D-Sv-8v1"/>
+                <outlet property="profileImageView" destination="IBZ-lI-gwZ" id="L2a-Yh-xte"/>
             </connections>
-            <point key="canvasLocation" x="247.32824427480915" y="50.70422535211268"/>
+            <point key="canvasLocation" x="102.29007633587786" y="28.87323943661972"/>
         </tableViewCell>
     </objects>
 </document>
